--- a/.github/workflows/persist-hygiejne.yml
+++ b/.github/workflows/persist-hygiejne.yml
@@ -1,4 +1,5 @@
-name: Persistens & Filhygiejne
+# .github/workflows/persist-hygiejne.yml
+name: "Persistens & Filhygiejne"
 
 on:
   push:
@@ -15,31 +16,57 @@ on:
       - "utils/**"
       - "outputs/**"
       - ".github/workflows/persist-hygiejne.yml"
-  workflow_dispatch:
+  workflow_dispatch: {}
 
 permissions:
-  contents: write
+  contents: read
+
+concurrency:
+  group: persist-hygiejne-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   rotate-and-archive:
+    name: Rotate outputs + arkiv
     runs-on: ubuntu-latest
     timeout-minutes: 15
+    env:
+      PYTHONPATH: ${{ github.workspace }}   # gør repo-roden importbar
+      TZ: Europe/Copenhagen
+
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.10" }
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+          cache: "pip"
+
       - name: Install deps (minimal)
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt || true
+          python -m pip install -U pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
       - name: Rotate outputs
-        run: python tools/rotate_outputs.py
+        run: |
+          # Kør som modul, så relative imports (utils/...) virker
+          python -m tools.rotate_outputs
+
       - name: Make archive
-        run: python tools/make_archive.py
+        run: |
+          mkdir -p artifacts
+          TS="$(date -u +'%Y%m%dT%H%M%SZ')"
+          # Sikr at outputs/ findes så zip ikke fejler
+          if [ ! -d "outputs" ]; then mkdir -p outputs && touch outputs/.empty; fi
+          zip -r "artifacts/trading-core-archive_${TS}.zip" outputs/ -q
+
       - name: Upload artifact (archive)
+        if: always()   # upload også ved fejl for fejlsøgning
         uses: actions/upload-artifact@v4
         with:
           name: trading-core-archive
-          path: archives/*.zip
+          path: artifacts/*.zip
           if-no-files-found: warn
           retention-days: 30
