--- a/pytest.ini
+++ b/pytest.ini
@@ -58,11 +58,10 @@ addopts =
     --timeout=30
     --durations=10
     --color=yes
-    # Coverage – Fase 3 + Fase 4 (persistens)
-    --cov=bot.live_connector.metrics
-    --cov=bot.live_connector.venues.okx
-    --cov=bot.live_connector.venues.kraken
+    # Coverage – KUN de moduler denne suite tester
     --cov=utils.artifacts
+    --cov=tools.make_archive
+    --cov=tools.rotate_outputs
     --cov-branch
     --cov-context=test
     --cov-report=term-missing:skip-covered
@@ -92,6 +91,7 @@ filterwarnings =
     ignore:.*WebSocketServerProtocol is deprecated.*:DeprecationWarning
     ignore:.*Please use `import python_multipart` instead.*:PendingDeprecationWarning
     ignore:.*distutils package is deprecated.*:DeprecationWarning
+    ignore:.*invalid escape sequence.*:DeprecationWarning
 
 # CLI logging
 log_cli = true
