test(ci): broaden coverage targets to avoid 0% in Connector CI

--- a/pytest.ini
+++ b/pytest.ini
@@ -12,7 +12,7 @@ python_files = test_*.py *_test.py
 python_classes = Test*
 python_functions = test_*
 
-# Sørg for at projektroden er på import-stien (muliggør from utils import ...)
+# Sørg for at projektroden er på import-stien
 pythonpath = .
 
 # Ignorer støjende/ikke-test mapper
@@ -58,7 +58,10 @@ addopts =
     --timeout=30
     --durations=10
     --color=yes
-    # Coverage – KUN de moduler denne suite tester
+    # Coverage – dæk både Connector- og Persistens-moduler
+    --cov=bot.live_connector.metrics
+    --cov=bot.live_connector.venues.okx
+    --cov=bot.live_connector.venues.kraken
     --cov=utils.artifacts
     --cov=tools.make_archive
     --cov=tools.rotate_outputs
