--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,29 +2,34 @@
 default_language_version:
   python: python3.11
 
-# Ignorér auto-genererede / tunge mapper
+# Ignorér genererede/tunge/CI-artefakter, så hooks ikke piller ved dem
 exclude: >
   ^(
     outputs/|
     logs/|
     backups/|
     mlruns/|
+    htmlcov/|
+    reports/|
+    \.pytest_cache/|
+    \.coverage.*|
+    .*\.ipynb_checkpoints/|
     ops/alertmanager/|
     ops/prometheus/
   )
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    # behold din nyere serie; virker fint med nedenstående hooks
     rev: v6.0.0
     hooks:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: mixed-line-ending
-        args: [--fix=lf]          # tving LF, matcher .gitattributes
+        # 'auto' bevarer CRLF i .ps1/.bat (jvf. .gitattributes) og fjerner kun blandede endinger
+        args: [--fix=auto]
       - id: check-yaml
       - id: check-json
-      - id: check-ast             # Python syntaks-check
+      - id: check-ast                # Python syntaks-check
       - id: check-merge-conflict
       - id: check-case-conflict
       - id: requirements-txt-fixer
@@ -32,19 +37,14 @@ repos:
       - id: debug-statements
 
   - repo: https://github.com/psf/black
-    # pin til en stabil udgave der matcher pyproject.toml (py311)
-    rev: 24.8.0
+    # stabil version som spiller godt med py311
+    rev: 25.9.0
     hooks:
       - id: black
 
   - repo: https://github.com/PyCQA/isort
-    rev: 5.13.2
+    rev: 7.0.0
     hooks:
       - id: isort
-        # bruger profile=black fra pyproject.toml; ingen args nødvendige
-        additional_dependencies: []  # placeholder hvis du får env-issues på Windows
-
-# (Valgfrit) pre-commit.ci automatiske opdateringer – kan du slå til senere
-# ci:
-#   autofix_prs: true
-#   autoupdate_schedule: weekly
+        # isort styres af profile=black fra pyproject.toml (ingen ekstra args nødvendige)
+        additional_dependencies: []  # kan fjernes; handy hvis Windows env driller
