test(ci): broaden coverage targets for Connector + persistens (avoid 0% in CI)

--- a/pytest.ini
+++ b/pytest.ini
@@ -58,7 +58,7 @@ addopts =
     --timeout=30
     --durations=10
     --color=yes
-    # Coverage – dæk både Connector- og Persistens-moduler (så venues/integration-jobs ikke får 0%)
+    # Coverage – dæk Connector + Persistens, så venues/integration-jobs ikke får 0%
     --cov=bot.live_connector.metrics
     --cov=bot.live_connector.venues.okx
     --cov=bot.live_connector.venues.kraken
