test(ci): broaden connector coverage target in pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -58,10 +58,8 @@ addopts =
     --timeout=30
     --durations=10
     --color=yes
-    # Coverage – dæk Connector + Persistens, så venues/integration-jobs ikke får 0%
-    --cov=bot.live_connector.metrics
-    --cov=bot.live_connector.venues.okx
-    --cov=bot.live_connector.venues.kraken
+    # Coverage – bredt mål for Connector + persistens, så venues/integration ALDRIG giver 0%
+    --cov=bot.live_connector
     --cov=utils.artifacts
     --cov=tools.make_archive
     --cov=tools.rotate_outputs
