--- a/.github/workflows/connector-ci.yml
+++ b/.github/workflows/connector-ci.yml
@@ -72,6 +72,8 @@ jobs:
         run: |
           python -m pip install -U pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          # sikr coverage plugin er tilgængeligt selv hvis det ikke er i requirements
+          pip install -q pytest pytest-cov
 
       - name: Create reports dir
         run: mkdir -p reports
@@ -80,12 +82,9 @@ jobs:
         run: |
           pytest tests/venues tests/integration \
             -o addopts="-q -ra --maxfail=1 --disable-warnings --timeout=30 --durations=10 --color=yes \
-            --cov=bot.live_connector.venues --cov=bot.live_connector.metrics \
-            --cov-branch --cov-context=test \
-            --cov-report=term-missing:skip-covered \
-            --cov-report=html \
-            --cov-report=xml:reports/coverage.xml \
-            --cov-fail-under=40 \
+            --cov=bot.live_connector --cov-report=term-missing:skip-covered \
+            --cov-report=html --cov-report=xml:reports/coverage.xml \
+            --cov-branch --cov-context=test --cov-fail-under=40 \
             --junitxml=reports/junit.xml \
             -k 'not heavy and not talib and not pandas_ta'"
 
