--- a/pytest.ini
+++ b/pytest.ini
@@ -15,7 +15,7 @@ python_functions = test_*
 # Sørg for at projektroden er på import-stien
 pythonpath = .
 
-# Ignorer støjende/ikke-test mapper
+# Ignorer støjende/ikke-test mapper (inkl. Windows systemmapper)
 norecursedirs =
     .git
     .venv
@@ -31,6 +31,8 @@ norecursedirs =
     mlruns
     ops
     docs
+    $Recycle.Bin
+    System Volume Information
 
 # Asyncio-integration
 asyncio_mode = auto
@@ -48,7 +50,7 @@ markers =
     pandas_ta: Tests der kræver pandas_ta
     persistence: Fase-4 persistens/filhygiejne tests (utils/artifacts, rotation, arkiv)
 
-# Standard-flags
+# Standard-flags (coverage styres i CI – ikke her)
 addopts =
     -vv
     -ra
@@ -58,29 +60,6 @@ addopts =
     --timeout=30
     --durations=10
     --color=yes
-    # Coverage – bredt mål for Connector + persistens, så venues/integration ALDRIG giver 0%
-    --cov=bot.live_connector
-    --cov=utils.artifacts
-    --cov=tools.make_archive
-    --cov=tools.rotate_outputs
-    --cov-branch
-    --cov-context=test
-    --cov-report=term-missing:skip-covered
-    --cov-report=html
-    --cov-report=xml:reports/coverage.xml
-    --cov-fail-under=40
-    # CI-artefakt (JUnit)
-    --junitxml=reports/junit.xml
-    # Ignorer filer/mapper som ikke er tests
-    --ignore=test.txt
-    --ignore=README.md
-    --ignore=outputs
-    --ignore=data
-    --ignore=notebooks
-    --ignore=ops
-    --ignore=docs
-    --ignore=archives
-    --ignore=artifacts
     # Midlertidigt: udeluk tunge/native tests globalt (matcher CI)
     -k "not heavy and not talib and not pandas_ta"
 
