--- a/ops/alertmanager/alertmanager.runtime.yml
+++ b/ops/alertmanager/alertmanager.runtime.yml
@@ -1,5 +1,4 @@
 ﻿# ops/alertmanager/alertmanager.runtime.yml
-
 global:
   resolve_timeout: 5m
 
@@ -9,18 +8,27 @@ templates:
 
 route:
   receiver: telegram-default
-  group_by: [alertname, job, instance]
+  group_by: [alertname, job, instance, service]
   group_wait: 30s
   group_interval: 5m
   repeat_interval: 4h
 
+  # Under-routes for målrettet håndtering
   routes:
-    # Kritiske alarmer går til en separat receiver med kortere kadencer
+    # 1) Kritiske alarmer -> separat receiver + kortere kadencer
     - matchers: ['severity="critical"']
       receiver: telegram-critical
       group_wait: 10s
       group_interval: 2m
       repeat_interval: 1h
+
+    # 2) Data-kvalitet (Fase 5) kan tunes separat uden at påvirke øvrige
+    - matchers: ['service="data"']
+      receiver: telegram-default
+      group_by: [alertname, dataset]
+      group_wait: 20s
+      group_interval: 3m
+      repeat_interval: 2h
 
 receivers:
   - name: telegram-default
@@ -29,7 +37,7 @@ receivers:
         chat_id: ${TELEGRAM_CHAT_ID}
         parse_mode: "HTML"
         send_resolved: true
-        # Brug den kompatible template (defineret i ops/alertmanager/templates/telegram.tmpl)
+        # Template defineret i ops/alertmanager/templates/telegram.tmpl
         message: '{{ template "telegram.message" . }}'
 
   - name: telegram-critical
@@ -45,4 +53,4 @@ receivers:
 inhibit_rules:
   - source_matchers: ['severity="critical"']
     target_matchers: ['severity="warning"']
-    equal: [alertname, job, instance]
+    equal: [alertname, job, instance, service]
