--- a/.github/workflows/observability.yml
+++ b/.github/workflows/observability.yml
@@ -1,16 +1,12 @@
 name: observability
 
 on:
-  # Kør på alle branches ved push
   push:
     branches: ["**"]
-  # Kør på PR'er fra alle branches
   pull_request:
     branches: ["**"]
-  # Daglig røgalarm
   schedule:
     - cron: "0 5 * * *"
-  # Manuelt kick i Actions UI
   workflow_dispatch:
 
 concurrency:
@@ -24,6 +20,7 @@ env:
   PYTHONUNBUFFERED: "1"
   MPLBACKEND: Agg
   PROM_VERSION: "v3.6.0"   # match docker-compose Prometheus/promtool version
+  DQ_SHARED_SECRET: "change-me-long-random"  # bruges af /dq/* prod-endpoints
 
 jobs:
   unit-smoke:
@@ -60,18 +57,20 @@ jobs:
           python -m pip install -U pip wheel setuptools
 
           if [ -f requirements.txt ]; then
+            # Hurtig binær pre-seed for CI-stabilitet
             pip install --only-binary=:all: 'numpy==1.26.4' 'pyarrow==11.0.0' || true
             pip install -r requirements.txt
           else
-            pip install fastapi uvicorn prometheus-client httpx pytest
+            pip install fastapi uvicorn prometheus-client httpx pytest pandas pyarrow requests
           fi
 
+          # Valgfrit: CPU Torch (ikke kritisk for observability)
           pip install --extra-index-url https://download.pytorch.org/whl/cpu \
             'torch==2.2.2' 'torchvision==0.17.2' 'torchaudio==2.2.2' || true
 
           python - <<'PY'
           import importlib
-          for name in ("torch","torchvision","torchaudio","fastapi","uvicorn","prometheus_client","numpy","pyarrow","pytest"):
+          for name in ("torch","torchvision","torchaudio","fastapi","uvicorn","prometheus_client","numpy","pyarrow","pytest","pandas","requests"):
               try:
                   m = importlib.import_module(name)
                   print(f"{name}: {getattr(m,'__version__','?')}")
@@ -80,6 +79,8 @@ jobs:
           PY
 
       - name: Launch app (uvicorn) in background
+        env:
+          ENABLE_DEBUG_ROUTES: "1"   # må gerne være aktiv i unit-smoke
         run: |
           set -euxo pipefail
           nohup uvicorn bot.live_connector.runner:app \
@@ -90,27 +91,42 @@ jobs:
             fi
             sleep 1
           done
-          # Undgå curl exit 23 ved piping til head — skriv til fil og head bagefter
           curl -fsS http://localhost:8000/metrics > /tmp/metrics_all.txt
           head -n 5 /tmp/metrics_all.txt || true
 
-      - name: Smoke /metrics contains core metrics
+      - name: Trigger DQ freshness via prod endpoint (header auth)
+        env:
+          DQ_URL: "http://localhost:8000"
         run: |
           set -euxo pipefail
-          curl -fsS http://localhost:8000/metrics | tee /tmp/metrics.txt
+          curl -fsS -XPOST \
+            -H "X-Dq-Secret: ${DQ_SHARED_SECRET}" \
+            "${DQ_URL}/dq/freshness?dataset=ohlcv_1h&minutes=30" > /dev/null
+          sleep 1
+          curl -fsS "${DQ_URL}/metrics" | tee /tmp/metrics_after_dq.txt >/dev/null
+
+      - name: Smoke /metrics contains core & DQ metrics
+        run: |
+          set -euxo pipefail
+          curl -fsS http://localhost:8000/metrics | tee /tmp/metrics.txt >/dev/null
+          # Core
           grep -q "feed_transport_latency_ms_bucket" /tmp/metrics.txt
           grep -q "feed_bar_close_lag_ms"          /tmp/metrics.txt
           grep -q "feed_bars_total"                /tmp/metrics.txt
           grep -q "feed_reconnects_total"          /tmp/metrics.txt
           grep -q "feed_queue_depth"               /tmp/metrics.txt
           grep -q "feature_compute_ms_bucket"      /tmp/metrics.txt
+          # Fase 5 (DQ)
+          grep -q 'dq_violations_total'            /tmp/metrics.txt
+          # Bekræft specifik label for freshness
+          grep -q 'dq_freshness_minutes{dataset="ohlcv_1h"}' /tmp/metrics_after_dq.txt
 
       # ---------- promtool forberedelse: sørg for alle filer findes ----------
       - name: Ensure Prometheus rule files exist (create minimal if missing)
         shell: bash
         run: |
           set -euxo pipefail
-          mkdir -p ops/prometheus
+          mkdir -p ops/prometheus/rules ops/prometheus/tests
 
           if [ ! -f ops/prometheus/alerts.yml ]; then
             printf '%s\n' \
@@ -128,6 +144,33 @@ jobs:
               > ops/prometheus/recording_rules.yml
           fi
 
+          # Fase 5: data_quality.yml (minimal hvis mangler) – korrekt YAML indrykning
+          if [ ! -f ops/prometheus/rules/data_quality.yml ]; then
+            cat > ops/prometheus/rules/data_quality.yml <<'YAML'
+            groups:
+              - name: data_quality
+                rules:
+                  - alert: DQViolationsBurst
+                    expr: increase(dq_violations_total[5m]) > 0
+                    for: 2m
+                    labels:
+                      service: data
+                      severity: warning
+                    annotations:
+                      summary: "Data Quality issues"
+                      description: "Violations i seneste 5m."
+                  - alert: DataFreshnessStale
+                    expr: dq_freshness_minutes{dataset="ohlcv_1h"} > 15
+                    for: 5m
+                    labels:
+                      service: data
+                      severity: critical
+                    annotations:
+                      summary: "Stale dataset: ohlcv_1h"
+                      description: "Ingen opdatering >15 min."
+            YAML
+          fi
+
           test -f ops/prometheus/prometheus.yml
 
       - name: promtool check config (prometheus.yml)
@@ -137,6 +180,7 @@ jobs:
             -v "$PWD/ops/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro" \
             -v "$PWD/ops/prometheus/alerts.yml:/etc/prometheus/alerts.yml:ro" \
             -v "$PWD/ops/prometheus/recording_rules.yml:/etc/prometheus/recording_rules.yml:ro" \
+            -v "$PWD/ops/prometheus/rules/data_quality.yml:/etc/prometheus/rules/data_quality.yml:ro" \
             --entrypoint=promtool \
             "prom/prometheus:${PROM_VERSION}" \
             check config /etc/prometheus/prometheus.yml
@@ -159,6 +203,15 @@ jobs:
             "prom/prometheus:${PROM_VERSION}" \
             check rules /etc/prom/recording_rules.yml
 
+      - name: promtool check rules (rules/data_quality.yml)
+        run: |
+          set -euxo pipefail
+          docker run --rm \
+            -v "$PWD/ops/prometheus/rules/data_quality.yml:/etc/prom/rules/data_quality.yml:ro" \
+            --entrypoint=promtool \
+            "prom/prometheus:${PROM_VERSION}" \
+            check rules /etc/prom/rules/data_quality.yml
+
       # ✅ promtool enhedstests af alerts (betinget)
       - name: promtool test alert rules (unit)
         shell: bash
@@ -174,10 +227,39 @@ jobs:
             echo "No alerts_test.yml present — skipping promtool unit tests."
           fi
 
-      # ✅ Kør kun metrics-smoke og slå coverage fra (overrider pytest.ini addopts)
+      # ✅ Kør DQ-unit tests (hvis mappen findes)
+      - name: "Run tests: data_quality (if present)"
+        shell: bash
+        run: |
+          set -euxo pipefail
+          if [ -d tests/data_quality ]; then
+            pytest -q -p no:cov -o addopts='' tests/data_quality
+          else
+            echo "No tests/data_quality present — skipping."
+          fi
+
+      # ✅ Kun metrics-smoke, ingen coverage gate
       - name: Run tests (metrics only, no coverage gate)
         run: |
-          pytest -q -p no:cov -o addopts='' tests/test_metrics_exposition.py
+          if [ -f tests/test_metrics_exposition.py ]; then
+            pytest -q -p no:cov -o addopts='' tests/test_metrics_exposition.py
+          else
+            echo "No tests/test_metrics_exposition.py present — skipping."
+          fi
+
+      # Valgfrit: ad-hoc DQ check på et kendt dataset hvis findes
+      - name: Optional ad-hoc DQ check
+        shell: bash
+        run: |
+          set -euxo pipefail
+          if [ -f tools/check_data_quality.py ] && [ -f outputs/data/btc_1h_latest.parquet ]; then
+            python tools/check_data_quality.py \
+              --dataset outputs/data/btc_1h_latest.parquet \
+              --contract ohlcv_1h \
+              --print-report || true
+          else
+            echo "DQ CLI eller dataset ikke tilgængeligt — skipping."
+          fi
 
       - name: Upload metrics and logs (artifact)
         if: always()
@@ -187,7 +269,9 @@ jobs:
           path: |
             /tmp/metrics.txt
             /tmp/metrics_all.txt
+            /tmp/metrics_after_dq.txt
             /tmp/app.log
+          if-no-files-found: ignore
 
   compose-integration:
     name: Compose integration (target=UP)
@@ -207,7 +291,7 @@ jobs:
         shell: bash
         run: |
           set -euxo pipefail
-          mkdir -p ops/prometheus
+          mkdir -p ops/prometheus/rules
           if [ ! -f ops/prometheus/alerts.yml ]; then
             printf '%s\n' \
               'groups:' \
@@ -220,10 +304,27 @@ jobs:
               '  - name: recordings.empty' \
               '    rules: []' > ops/prometheus/recording_rules.yml
           fi
+          if [ ! -f ops/prometheus/rules/data_quality.yml ]; then
+            cat > ops/prometheus/rules/data_quality.yml <<'YAML'
+            groups:
+              - name: data_quality
+                rules:
+                  - alert: DQViolationsBurst
+                    expr: increase(dq_violations_total[5m]) > 0
+                    for: 2m
+                    labels:
+                      service: data
+                      severity: warning
+                    annotations:
+                      summary: "Data Quality issues"
+            YAML
+          fi
           test -f ops/prometheus/prometheus.yml
 
       - name: Compose up (live_connector + prometheus only)
         working-directory: ops/compose
+        env:
+          DQ_SHARED_SECRET: ${{ env.DQ_SHARED_SECRET }}
         run: |
           set -euxo pipefail
           echo "Docker/Compose versions:"
@@ -281,6 +382,20 @@ jobs:
           fi
 
           test "${up}" -gt 0
+
+      - name: Trigger DQ freshness via prod endpoint (compose)
+        run: |
+          set -euxo pipefail
+          curl -fsS -XPOST \
+            -H "X-Dq-Secret: ${DQ_SHARED_SECRET}" \
+            "http://localhost:8000/dq/freshness?dataset=ohlcv_1h&minutes=30" > /dev/null
+          sleep 2
+
+      - name: Assert dq_freshness_minutes via Prometheus instant query
+        run: |
+          set -euxo pipefail
+          curl -fsS "http://localhost:9090/api/v1/query?query=dq_freshness_minutes{dataset=\"ohlcv_1h\"}" \
+          | jq -e '.data.result[0]'
 
       - name: Dump Prometheus target summaries
         if: always()
